// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Component Tests Matches Mounted SnapShot 1`] = `
<InputTest>
  <Dummy>
    <Input
      checked={null}
      className=""
      disabled={false}
      id="sample-text-input"
      inputRef={[Function]}
      maxLength={6}
      name={null}
      onChange={[Function]}
      placeholder="Enter between [1-5]"
      type="text"
      validateWithPattern={
        Array [
          Object {
            "msg": "Value must be a number",
            "pattern": /\\^\\(\\(\\\\d\\+\\)\\*\\)\\?\\$/,
          },
          Object {
            "msg": "Between 1-5",
            "pattern": /\\^\\(\\(\\[1-5\\]\\+\\)\\*\\)\\?\\$/,
          },
        ]
      }
      value=""
    >
      <input
        checked={null}
        className="nwc-inp  "
        disabled={false}
        id="sample-text-input"
        maxLength={6}
        name={null}
        onChange={[Function]}
        placeholder="Enter between [1-5]"
        tabIndex="0"
        type="text"
        value=""
      />
    </Input>
    <div />
    <Input
      checked={false}
      className=""
      disabled={false}
      id="sample-checkbox"
      inputRef={[Function]}
      maxLength={null}
      name="sampleCheckbox"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder={null}
      type="checkbox"
      validateWithPattern={null}
      value="0"
    >
      <Label
        className="nwc-inp-container"
        htmlFor="sample-checkbox"
      >
        <label
          className="nwc-inp-container"
          htmlFor="sample-checkbox"
        >
          <input
            type="hidden"
          />
          <span
            className="nwc-inp-hiddenwrapper"
          >
            <input
              checked={false}
              disabled={false}
              id="sample-checkbox"
              maxLength={null}
              name="sampleCheckbox"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={null}
              tabIndex="0"
              type="checkbox"
              value="0"
            />
          </span>
          <i
            className="nwc-inp-checkbox   "
          />
        </label>
      </Label>
    </Input>
    <Input
      checked={false}
      className=""
      disabled={false}
      id="sample-radio"
      inputRef={[Function]}
      maxLength={null}
      name="sampleRadio"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder={null}
      type="radio"
      validateWithPattern={null}
      value="0"
    >
      <Label
        className="nwc-inp-container"
        htmlFor="sample-radio"
      >
        <label
          className="nwc-inp-container"
          htmlFor="sample-radio"
        >
          <input
            type="hidden"
          />
          <span
            className="nwc-inp-hiddenwrapper"
          >
            <input
              checked={false}
              disabled={false}
              id="sample-radio"
              maxLength={null}
              name="sampleRadio"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={null}
              tabIndex="0"
              type="radio"
              value="0"
            />
          </span>
          <i
            className="nwc-inp-radio   "
          />
        </label>
      </Label>
    </Input>
    <Input
      checked={null}
      className=""
      disabled={false}
      id="sample-number-nomaxlength"
      inputRef={[Function]}
      maxLength={null}
      name="sampleNumber"
      onChange={[Function]}
      placeholder={null}
      type="number"
      validateWithPattern={null}
      value=""
    >
      <input
        checked={null}
        className="nwc-inp  "
        disabled={false}
        id="sample-number-nomaxlength"
        maxLength={null}
        name="sampleNumber"
        onChange={[Function]}
        placeholder={null}
        tabIndex="0"
        type="number"
        value=""
      />
    </Input>
    <Input
      checked={null}
      className=""
      disabled={false}
      id="sample-number"
      inputRef={[Function]}
      maxLength={5}
      name="sampleNumber"
      onChange={[Function]}
      placeholder={null}
      type="number"
      validateWithPattern={null}
      value=""
    >
      <input
        checked={null}
        className="nwc-inp  "
        disabled={false}
        id="sample-number"
        maxLength={5}
        name="sampleNumber"
        onChange={[Function]}
        placeholder={null}
        tabIndex="0"
        type="number"
        value=""
      />
    </Input>
  </Dummy>
</InputTest>
`;

exports[`Root Component Tests Matches Shallow SnapShot 1`] = `
<Dummy>
  <Input
    checked={null}
    className=""
    disabled={false}
    id="sample-text-input"
    inputRef={[Function]}
    maxLength={6}
    name={null}
    onChange={[Function]}
    placeholder="Enter between [1-5]"
    type="text"
    validateWithPattern={
      Array [
        Object {
          "msg": "Value must be a number",
          "pattern": /\\^\\(\\(\\\\d\\+\\)\\*\\)\\?\\$/,
        },
        Object {
          "msg": "Between 1-5",
          "pattern": /\\^\\(\\(\\[1-5\\]\\+\\)\\*\\)\\?\\$/,
        },
      ]
    }
    value=""
  />
  <div />
  <Input
    checked={false}
    className=""
    disabled={false}
    id="sample-checkbox"
    inputRef={[Function]}
    maxLength={null}
    name="sampleCheckbox"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder={null}
    type="checkbox"
    validateWithPattern={null}
    value="0"
  />
  <Input
    checked={false}
    className=""
    disabled={false}
    id="sample-radio"
    inputRef={[Function]}
    maxLength={null}
    name="sampleRadio"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder={null}
    type="radio"
    validateWithPattern={null}
    value="0"
  />
  <Input
    checked={null}
    className=""
    disabled={false}
    id="sample-number-nomaxlength"
    inputRef={[Function]}
    maxLength={null}
    name="sampleNumber"
    onChange={[Function]}
    placeholder={null}
    type="number"
    validateWithPattern={null}
    value=""
  />
  <Input
    checked={null}
    className=""
    disabled={false}
    id="sample-number"
    inputRef={[Function]}
    maxLength={5}
    name="sampleNumber"
    onChange={[Function]}
    placeholder={null}
    type="number"
    validateWithPattern={null}
    value=""
  />
</Dummy>
`;
